--- a/package.json
+++ b/package.json
@@ -1,21 +1,34 @@
 {
-  "name": "API-de-Times-de-futebol-e-Jogadores",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/janeluz/API-de-Times-de-futebol-e-Jogadores.git",
-  "author": "Jane Luz <janerodrigues_2610@hotmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "@types/express": "^4.17.14",
-    "express": "^4.18.2",
-    "ts-node": "^10.9.1",
-    "typeorm": "^0.3.10",
-    "typescript": "^4.8.4"
-  },
-  "devDependencies": {
-    "eslint": "^8.26.0",
-    "eslint-import-resolver-typescript": "^3.5.2",
-    "eslint-plugin-import-helpers": "^1.3.1",
-    "ts-node-dev": "^2.0.0"
-  }
+   "name": "API-de-Times-de-futebol-e-Jogadores",
+   "version": "1.0.0",
+   "main": "index.js",
+   "repository": "https://github.com/janeluz/API-de-Times-de-futebol-e-Jogadores.git",
+   "author": "Jane Luz <janerodrigues_2610@hotmail.com>",
+   "license": "MIT",
+   "dependencies": {
+      "@types/express": "^4.17.14",
+      "@types/node": "^18.11.7",
+      "express": "^4.18.2",
+      "nodemon": "^2.0.20",
+      "reflect-metadata": "^0.1.13",
+      "sqlite": "^4.1.2",
+      "sqlite3": "^5.1.2",
+      "ts-node": "^10.9.1",
+      "typeorm": "0.3.10",
+      "typescript": "^4.8.4"
+   },
+   "scripts": {
+      "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+      "start": "ts-node src/index.ts",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "devDependencies": {
+      "@types/node": "^16.11.10",
+      "eslint": "^8.26.0",
+      "eslint-import-resolver-typescript": "^3.5.2",
+      "eslint-plugin-import-helpers": "^1.3.1",
+      "ts-node": "10.7.0",
+      "ts-node-dev": "^2.0.0",
+      "typescript": "4.5.2"
+   }
 }
