--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
    },
    "devDependencies": {
       "@types/node": "^16.11.10",
+      "@types/uuid": "^8.3.4",
       "eslint": "^8.26.0",
       "eslint-import-resolver-typescript": "^3.5.2",
       "eslint-plugin-import-helpers": "^1.3.1",
       "ts-node": "10.7.0",
       "ts-node-dev": "^2.0.0",
-      "typescript": "4.5.2"
+      "typescript": "4.5.2",
+      "uuid": "^9.0.0"
    }
 }
