--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
    "dependencies": {
       "@types/express": "^4.17.14",
       "@types/node": "^18.11.7",
+      "better-sqlite3": "^7.6.2",
       "express": "^4.18.2",
       "nodemon": "^2.0.20",
       "reflect-metadata": "^0.1.13",
@@ -25,8 +26,12 @@
    "devDependencies": {
       "@types/node": "^16.11.10",
       "@types/uuid": "^8.3.4",
+      "@typescript-eslint/eslint-plugin": "^5.41.0",
+      "@typescript-eslint/parser": "^5.41.0",
       "eslint": "^8.26.0",
+      "eslint-config-airbnb-base": "^15.0.0",
       "eslint-import-resolver-typescript": "^3.5.2",
+      "eslint-plugin-import": "^2.26.0",
       "eslint-plugin-import-helpers": "^1.3.1",
       "ts-node": "10.7.0",
       "ts-node-dev": "^2.0.0",
