--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "sqlite": "^4.1.2",
       "sqlite3": "^5.1.2",
       "ts-node": "^10.9.1",
+      "tsyringe": "^4.7.0",
       "typeorm": "0.3.10",
       "typescript": "^4.8.4"
    },
