--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
       "@types/node": "^18.11.7",
       "better-sqlite3": "^7.6.2",
       "express": "^4.18.2",
+      "express-async-errors": "^3.1.1",
       "nodemon": "^2.0.20",
       "reflect-metadata": "^0.1.13",
       "sqlite": "^4.1.2",
